:lipstick: Fixed vertical scrolling in dashboard | Cause of the bug is horizontal scrollbar

--- a/src/scss/dna/dna.scss
+++ b/src/scss/dna/dna.scss
@@ -215,7 +215,7 @@ dd {
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
+  min-height: calc(100vh- 3px);
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
